@@ -40,7 +40,7 @@ U32 = numpy.uint32
 stat_dt = numpy.dtype([('mean', F32), ('stddev', F32)])
 
 
-depr = deprecated('Use the csv exporter instead')
+deprecated = deprecated('Use the csv exporter instead')
 
 
 def add_quotes(values):
@@ -292,7 +292,7 @@ def export_loss_curves(ekey, dstore):
 
 
 @export.add(('dmg_by_asset', 'xml'))
-@depr
+@deprecated
 def export_damage(ekey, dstore):
     loss_types = dstore.get_attr('composite_risk_model', 'loss_types')
     damage_states = dstore.get_attr('composite_risk_model', 'damage_states')
@@ -333,7 +333,7 @@ def export_damage(ekey, dstore):
 
 
 @export.add(('dmg_by_taxon', 'xml'))
-@depr
+@deprecated
 def export_damage_taxon(ekey, dstore):
     loss_types = dstore.get_attr('composite_risk_model', 'loss_types')
     damage_states = dstore.get_attr('composite_risk_model', 'damage_states')
@@ -365,7 +365,7 @@ def export_damage_taxon(ekey, dstore):
 
 
 @export.add(('dmg_total', 'xml'))
-@depr
+@deprecated
 def export_damage_total(ekey, dstore):
     loss_types = dstore.get_attr('composite_risk_model', 'loss_types')
     damage_states = dstore.get_attr('composite_risk_model', 'damage_states')
@@ -588,7 +588,7 @@ def get_loss_maps(dstore, kind):
 
 # used by event_based_risk and classical_risk
 @export.add(('loss_maps-rlzs', 'xml'), ('loss_maps-rlzs', 'geojson'))
-@depr
+@deprecated
 def export_loss_maps_rlzs_xml_geojson(ekey, dstore):
     oq = dstore['oqparam']
     cc = dstore['assetcol/cost_calculator']
@@ -635,7 +635,7 @@ def export_loss_maps_rlzs_xml_geojson(ekey, dstore):
 # NB: loss_maps-stats are NOT computed as stats of loss_maps-rlzs,
 # instead they are extracted directly from loss_maps-stats
 @export.add(('loss_maps-stats', 'xml'), ('loss_maps-stats', 'geojson'))
-@depr
+@deprecated
 def export_loss_maps_stats_xml_geojson(ekey, dstore):
     loss_maps = get_loss_maps(dstore, 'stats')
     N, S = loss_maps.shape
@@ -778,7 +778,7 @@ def export_agg_curve_rlzs(ekey, dstore):
 # this is used by classical risk
 @export.add(('loss_curves-stats', 'xml'),
             ('loss_curves-stats', 'geojson'))
-@depr
+@deprecated
 def export_loss_curves_stats(ekey, dstore):
     assetcol = dstore['assetcol/array'].value
     aref = dstore['asset_refs'].value
@@ -812,7 +812,7 @@ def export_loss_curves_stats(ekey, dstore):
             ('rcurves-rlzs', 'geojson'),
             ('rcurves-stats', 'xml'),
             ('rcurves-stats', 'geojson'))
-@depr
+@deprecated
 def export_rcurves_rlzs(ekey, dstore):
     assetcol = dstore['assetcol']
     aref = dstore['asset_refs'].value
@@ -884,7 +884,7 @@ def export_losses_by_taxon_csv(ekey, dstore):
 # this is used by classical_risk
 @export.add(('loss_curves-rlzs', 'xml'),
             ('loss_curves-rlzs', 'geojson'))
-@depr
+@deprecated
 def export_loss_curves_rlzs(ekey, dstore):
     assetcol = dstore['assetcol/array'].value
     aref = dstore['asset_refs'].value
@@ -922,7 +922,7 @@ BcrData = collections.namedtuple(
 
 # this is used by classical_bcr
 @export.add(('bcr-rlzs', 'xml'))
-@depr
+@deprecated
 def export_bcr_map_rlzs(ekey, dstore):
     assetcol = dstore['assetcol/array'].value
     aref = dstore['asset_refs'].value
